# sem5

./: реферат_физра.docx
node/Lab10/: 10-01.js  10-02.js  10-03.js  10-03a.js  package-lock.json  package.json  start.html
node/Lab7/: 07-01.js  m07_01.js
node/lab1/: 01-01.js  01-02.js
node/lab2/: 02-01.js  02-02.js  02-03.js  02-04.js  02-05.js  02-06.js  fetch.html  index.html  jquery.html  xmlhttprequest.html
node/lab3a/: 03-01-2.js  03-02.js  03-03.html  03-03.js  03-04.js  03-05.js
node/lab4/: 04-01.js  04-02.js  db.js  index.html  package.json
node/lab5/: 05-01.js  db.js  index.html
node/lab6/: 06-02.js  package-lock.json
node/lab8/: 08-00.js
node/lab9/: 09-00.js  09-01.js  09-02.js  09-03.js  09-04.js  09-05.js  09-06.js  09-07.js  09-08.js  package-lock.json  package.json
node/laba4/: 04-01.js  DB.js  index.html
node/laba5/: 05-01.js  DB.js  index.html
node/laba6/: 06-02.html  06-02.js  06-03.js  package-lock.json  package.json
node/laba8/: 08-00.js  form.html  package-lock.json  webform.html
os/Lab1/: task3-1.bat  task3-2.bat  task3-3.bat  Отчёт.docx
os/Lab2/: лаб2.docx
os/Lab3/: Отчёт.docx
os/Lab4/: lab4.docx  ~$Отчёт.docx
os/Lab5/: отчет-лаб5.docx
sp/lab8/lab8/tasks/task2222/: CMakeLists.txt
sp/lab8/lab8/tasks/task2222/include/: Mappingd-2.h  Mappingd.h
sp/lab8/lab8/tasks/task2222/src/: Lab-08b.c  dllmain-2.c  dllmain.c
testing/: Functional_Specification_Rimi_Pluss_Городилина_Анастасия2.docx  Lab12.docx  Lab3.docx  Lab5.docx  TestCaseTemplate.xls  Testing check-list for Lab-2.xlsx  lab6.xlsx  laba4.xlsx
(+523 files in other folders)
